--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,11 +11,28 @@
     {%- endif -%}
   </title>
 
-  {%-seo title=false-%}
-  {%-feed_meta-%}
+  {%- seo title=false -%}
+  {%- feed_meta -%}
 
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.css" integrity="sha384-OH8qNTHoMMVNVcKdKewlipV4SErXqccxxlg6HC9Cwjr5oZu2AdBej1TndeCirael" crossorigin="anonymous">
 
+  <!-- KaTeX CSS (이미 있으면 OK) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.css" integrity="sha384-OH8qNTHoMMVNVcKdKewlipV4SErXqccxxlg6HC9Cwjr5oZu2AdBej1TndeCirael" crossorigin="anonymous">
+
+  <!-- MathJax 전역 매크로 설정 추가 -->
+  <script type="text/x-mathjax-config">
+    MathJax = {
+      tex: {
+        macros: {
+          Q: "{\\mathbb{Q}}",
+          C: "{\\mathbb{C}}",
+          R: "{\\mathbb{R}}"
+          // 여기에 추가 매크로를 자유롭게 선언 가능!
+        }
+      }
+    };
+  </script>
+  <!-- MathJax CDN 스크립트 추가 -->
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
